--- a/style/mystyle.css
+++ b/style/mystyle.css
@@ -217,3 +217,19 @@ p.ord
 {
     text-decoration: none;
 }
+.nwarning
+{
+    text-align: center;
+    color: Red;
+    border: 1px solid red;
+    width: 133px;
+}
+div.left
+{
+    float: left;
+}
+.passwarning{
+    text-align: center;
+    color:green;
+    padding: 10px 0px 10px 0px;
+}
